cleanup code
- enforce formatting
- enforce this. for member access
- refactor jaxb2Ast and Ast2Jaxb
- reduce warnings (in total from 900 to 50)